--- a/css/repmain.css
+++ b/css/repmain.css
@@ -1,39 +1,89 @@
-/**{
-    font-size: .7rem;
-}*/
-table {
-    max-width: 100%;
-    border-collapse: collapse;
-}
-
-table, th, td {
-    border: 1px solid #c2c8f1;
-}
-
-th {
-    height: 30px;
-    text-align: center;
-}
-
-td {
-    height: 40px;
-    width: 25px;
-    vertical-align: bottom;
-    text-align: center;
-    font-size: .57rem;
-}
-
-th, td {
-    border-bottom: 1px solid #ddd;
-}
-
-button {
-    background-color: #008CBA; /* Blue */
-    border: none;
-    color: white;
+#setmaxbtn{
+    background-color: #e7e7e7; 
+    color: black;; /* Blue */
+    border: ;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+@media screen and (min-width: 414px){
+    table {
+        max-width: 100%;
+        border-collapse: collapse;
+    }
+
+    table, th, td {
+        border: 1px solid #c2c8f1;
+    }
+
+    th {
+        height: 30px;
+        text-align: center;
+    }
+
+    td {
+        height: 40px;
+        width: 25px;
+        vertical-align: bottom;
+        text-align: center;
+        font-size: .57rem;
+    }
+
+    th, td {
+        border-bottom: 1px solid #ddd;
+    }
+
+    button {
+        background-color: #008CBA; /* Blue */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+}
+@media all and (min-width: 1030px) {
+
+     table {
+        max-width: 100%;
+        border-collapse: collapse;
+    }
+
+    table, th, td {
+        border: 2px solid #c2c8f1;
+    }
+
+    th {
+        height: 20px;
+        text-align: center;
+    }
+
+    td {
+        height: 40px;
+        width: 50px;
+        vertical-align: bottom;
+        text-align: center;
+        font-size: .9rem;
+    }
+
+    th, td {
+        border-bottom: 1px solid #ddd;
+    }
+
+    button {
+        background-color: #008CBA; /* Blue */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+
 }
