--- a/css/repmain.css
+++ b/css/repmain.css
@@ -77,6 +77,7 @@ ul{
         vertical-align: bottom;
         text-align: center;
         font-size: .9rem;
+        font-weight: bold;
     }
 
     th, td {
