--- a/css/repmain.css
+++ b/css/repmain.css
@@ -9,6 +9,13 @@
     font-size: 16px;
 }
 
+#currentMAX{
+    border-style: solid; 
+    border-color: #e7e7e7;
+    max-width: 60px; 
+    max-height: 60px;
+}
+
 ul{
     list-style-position:inside;
     border-style: solid;
